--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "name": "devCompanionExtended",
     "version": "1.0.0",
-    "description": "Dev Companion Extended",
+    "description": "Hosts an MCP server allowing AI to control Discord via external tools",
     "main": "index.tsx",
     "author": {
         "name": "Bluscream",
         "url": "https://github.com/Bluscream"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/bluscream-vencord-plugins/devCompanionExtended.git"
     },
     "license": "GPL-3.0-or-later",
     "vencord": {
